--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,2 +1,3 @@
 v0.1.0, 3 March 2014 -- Initial release
 v0.1.1, 2 April 2014 -- Added timeline support, camera examples
+v0.1.2, 2 April 2014 -- Fixes
