--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,4 +1,4 @@
-v0.1.0, 3 March 2014 -- Initial release
-v0.1.1, 2 April 2014 -- Added timeline support, camera examples
-v0.1.2, 2 April 2014 -- Fixes
-v0.1.3, 29 May 204 -- Added auto-register facility, and push sync
+0.3.8
+-----
+
+* Added Remote Buttons
